# mission-control

./: .gitattributes  .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_KB.md  IMPROVEMENT_PLAN_V2_FLAWS.md  LICENSE  MissionControl_DotNet_Diagnosis.md  MissionControl_DotNet_Diagnosis_3.md  README.md  RESUME_HERE.md  app.py  build.bat  build.spec  github_sync.py  install.bat  install.sh  installer.iss  interactive_agent.py  package.json  pre_build_fix.py  requirements.txt  server.py  start.bat  start.sh
control_plane/: Dockerfile  README.md  api_spec.yaml  bring_tunnel_up.py  configure_custom_domain.py  docker-compose.dev.yml  first_enroll_demo.py  force_cleanup.py  requirements.txt  schema.md  seed.py
data/: SHARED_RULES.md
docs/: HIVEMIND_SPEC.md  HOSTING.md  MAINTENANCE_AUDIT_PROMPT.md  MEMORY_SYSTEM.md  SERVER_SPLIT_PLAN.md  SKILLS_CURATION_DESIGN.md  USER_GUIDE.md
installer/: Clayrune-Nuke.ps1  Clayrune-Setup.bat  Clayrune-Setup.command  README.md  _headers  index.html  install-prompt.md  install.ps1  install.sh  start.bat  start.command  start.sh
mc_remote/: PROPRIETARY.md  __init__.py  attestation.py  cloudflared.py  config.py  device_keys.py  enrollment.py  provider_impl.py  tunnel_supervisor.py
mc_remote_iface/: README.md  __init__.py  dev_stub.py  provider.py
mc_tty_shim/: sitecustomize.py
mc_tunnel/: .gitignore  Cargo.toml  PROPRIETARY.md  build.rs
mc_tunnel/src/: attestation.rs  client_secret.rs  cloudflared.rs  handshake.rs  main.rs  parent_check.rs
src-tauri/: tauri.conf.json
src-tauri/src/: lib.rs
static/: index.html  mockup.html
(+55 files in other folders)
